Working on service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,9 @@
 
 <app-tutorials (childEvent)="childData=$event" [parentData]="ptext.value">Loading tutorials component..</app-tutorials>-->
 
-<app-tutorials></app-tutorials>
+<!--<app-tutorials></app-tutorials>-->
 <!--<app-user-data-tdf></app-user-data-tdf>-->
-<app-user-data-mdf></app-user-data-mdf>
+<!--<app-user-data-mdf></app-user-data-mdf> -->
+
+<app-employee-list></app-employee-list>
+<app-employee-detail></app-employee-detail>
