--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,25 @@
 h3{
     color: blue;
 }
+.items .badge{
+    display: inline-block;
+    font-size: small;
+    color: white;
+    padding: 0.8em 0.7em 0 0.7em;
+    background-color: #607D8B;
+    line-height: 1em;
+    position: relative;
+    left: -1px;
+    top: -4px;
+    height: 1.8em;
+    margin-right: .8em;
+    border-radius: 4px 0 0 4px;
+}
+.items li.selected {
+    background-color: #CFD8DC;
+    color: white;
+}
+/* everywhere else */
+*{
+    font-family: Arial, Helvetica, sans-serif;
+}
