--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,9 +35,13 @@
 <!--<app-employee-list></app-employee-list>
 <app-employee-detail></app-employee-detail>-->
 
+<!--
 <h1>Routing Application</h1>
 <nav>
   <a routerLink='/departments' routerLinkActive="active">Departments</a>
   <a routerLink="/employees" routerLinkActive="active">Employees</a>
 </nav>
 <router-outlet></router-outlet>
+-->
+
+<app-animation></app-animation>
