--- a/src/app/animation/animation.component.html
+++ b/src/app/animation/animation.component.html
@@ -1,3 +1,5 @@
 <h1>{{title}}</h1>
 <button (click)="toggleLights()">Toggle Lights</button>
-<div (@lightsOnOff.done)="animationDone($event)" (@lightsOnOff.start)="animationStarted($event)" [@lightsOnOff]="roomState" class="room">Rotate</div>
+<!--<div (@lightsOnOff.done)="animationDone($event)" (@lightsOnOff.start)="animationStarted($event)" [@lightsOnOff]="roomState" class="room">Rotate</div>-->
+<div class="room" [@groupTrigger]="roomState">
+</div>
