--- a/src/app/animation/animation.component.html
+++ b/src/app/animation/animation.component.html
@@ -1,5 +1,8 @@
 <h1>{{title}}</h1>
-<button (click)="toggleLights()">Toggle Lights</button>
+<!--<button (click)="toggleLights()">Toggle Lights</button>
+<div class="room" [@groupTrigger]="roomState"></div> -->
 <!--<div (@lightsOnOff.done)="animationDone($event)" (@lightsOnOff.start)="animationStarted($event)" [@lightsOnOff]="roomState" class="room">Rotate</div>-->
-<div class="room" [@groupTrigger]="roomState">
+<button (click)="toggleDiv()">ToggleDiv</button>
+<div *ngIf="showDiv" [@flyInOut]>
+    FLYINOUT
 </div>
